[workspace]
members = ["light-program-profiler", "profiler-macro", "test-program"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
light-profiler-macro = { version = "0.1.1", path = "profiler-macro" }
light-program-profiler = { version = "0.1.1", path = "light-program-profiler" }
