[package]
name = "light-program-profiler"
version.workspace = true
edition.workspace = true
description = "Profiler macros with custom profiler syscalls for Solana programs"
license = "Apache-2.0"
repository = "https://github.com/Lightprotocol/light-program-profiler"
homepage = "https://github.com/Lightprotocol/light-program-profiler"

[features]
profile-program = ["light-profiler-macro/profile-program"]
profile-heap = ["light-profiler-macro/profile-heap"]
inline = ["light-profiler-macro/inline"]
mollusk = ["dep:solana-program-runtime", "dep:mollusk-svm"]

[dependencies]
light-profiler-macro.workspace = true
solana-program-runtime = { version = "2.3", optional = true }
mollusk-svm = { version = "0.3.0", optional = true }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
