[package]
name = "light-profiler-macro"
version.workspace = true
edition.workspace = true
description = "Procedural macros for light-program-profiler"
license = "Apache-2.0"
repository = "https://github.com/Lightprotocol/light-program-profiler"
homepage = "https://github.com/Lightprotocol/light-program-profiler"

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
] }

[features]
profile-program = []
profile-heap = []
inline = []

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
