[package]
name = "test-program"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "test_program"

[features]
no-entrypoint = []
profile-program = ["light-program-profiler/profile-program"]
default = ["profile-program"]

[dependencies]
light-program-profiler = { workspace = true, features = ["profile-program"] }
solana-program = "2.3"

[dev-dependencies]
litesvm = "0.7"
solana-instruction = "2.3"
solana-keypair = "2.2"
solana-pubkey = "2.3"
solana-signer = "2.2"
solana-transaction = "2.2"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
